--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
   <!DOCTYPE html>
   <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>GoWatch</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GoWatch</title>
+    <link rel="icon" type="image/png" href="/GoWatch_Icon.png?v=2" />
+  </head>
 
     <body>
       <div id="root"></div>
